--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ body {
 button {
   background-color: transparent;
   border: none;
+  cursor: pointer;
+}
+button:focus {
+  outline: none;
 }
 
 code {
